@@ -14,6 +14,7 @@ New functions:
 Improvements and bug fixes:
   Fixed loss of precision on variable saving
   Fixed clobbering of ans on radix change
+  testevaluator independent of locale (does not use ',' any more)
 
 SpeedCrunch 0.9
 ---------------------
